--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,77 +1,79 @@
 $colors: (
-    "white": #ffffff,
-    "white-1": #F8F9F9,
-    "grey": #444752,
-    "grey-1":#23272D,
-    "dark": #292C37,
-    "black": #1C1F24,
-    "blue": #0045D5,
-    "red": #BA2A39,
-    "green": #01A944,
-    "warn": #5E06CC,
+  "white": #ffffff,
+  "white-1": #F8F8FC,
+  "grey": #e9ebf3,
+  "grey-1": #6A6A77,
+  "dark": #282841,
+  "black": #07072A,
+  "blue": #1675F2,
+  "red": #ba2a39,
+  "green": #81FAEC,
+  "warn": #4743A7,
+  "warn-1": #F0F0FC,
 );
 
 // 字体大小
 $base-font-size: 16px;
 $font-sizes: (
-    xxs: 0.375,
-    //8px
-    xs: 0.4375,
-    //10px
-    sm: 0.5,
-    //12px
-    md: 0.5625,
-    //13px
-    lg: 0.75,
-    //14px
-    xl: 1.0,
-    //16px
-    xxl: 1.125,
-    //18px
-    xxxl: 1.5,
-    //20px
-    4xl: 2.0,
-    //20px
-    big: 2.25,
+  xxs: 0.375,
+  //8px
+  xs: 0.4375,
+  //10px
+  sm: 0.5,
+  //12px
+  md: 0.5625,
+  //13px
+  lg: 0.75,
+  //14px
+  xl: 1.0,
+  //16px
+  xxl: 1.125,
+  //18px
+  xxxl: 1.5,
+  //20px
+  4xl: 2.0,
+  //20px
+  big: 2.25,
 );
 
 
 
 $flex-jc: (
-    start: flex-start,
-    end: flex-end,
-    center: center,
-    between: space-between,
-    around: space-around,
-    evenly: space-evenly,
+  start: flex-start,
+  end: flex-end,
+  center: center,
+  between: space-between,
+  around: space-around,
+  evenly: space-evenly,
 );
 
 $flex-ai: (
-    start: flex-start,
-    end: flex-end,
-    center: center,
-    stretch: stretch,
-    baseline: baseline,
+  start: flex-start,
+  end: flex-end,
+  center: center,
+  stretch: stretch,
+  baseline: baseline,
 );
 
 
 //.mt-1 => margin top
 //spacing
 $spacing-types: (
-    m: margin,
-    p: padding,
+  m: margin,
+  p: padding,
 );
 $spacing-directions: (
-    t: top,
-    r: right,
-    b: bottom,
-    l: left,
+  t: top,
+  r: right,
+  b: bottom,
+  l: left,
 );
 $spacing-base-size: 16px;
 $spacing-sizes: (
-    0: 0,
-    1: 0.25,
-    2: 0.30,
-    3: 0.65,
-    4: 1.0,
+  0: 0,
+  1: 0.25,
+  2: 0.30,
+  3: 0.65,
+  4: 1.0,
+  5: 3.0,
 );
