Fixed some bugs.

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -60,6 +60,12 @@
     border-radius: 0px 10px 10px 0px;
 }
 
+.module_active2 {
+    color: #4743a7 !important;
+    background: radial-gradient(0% 0% at 0% 0%, #ffffff 0%, #c8c8fd 100%), #cacafd;
+    border-radius: 0px 0px 0px 0px;
+}
+
 .but-green {
     background: radial-gradient(0% 0% at 0% 0%, #88faee 0%, #11f9d2 100%), #42bc79;
     border-radius: 5px;
