add touch pad feature.

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -13,6 +13,12 @@
     width: 24px;
 }
 
+.keyimg2 {
+    filter: invert(1) brightness(0);
+    vertical-align: center;
+    width: 48px;
+}
+
 /* 滑块 */
 .el-slider__bar {
     background-color: #4743A7 !important;
