--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,6 +1,7 @@
 $colors: (
   "white": #ffffff,
   "white-1": #F8F8FC,
+  "white-2":#BABABB,
   "grey": #e9ebf3,
   "grey-1": #6A6A77,
   "dark": #282841,
