fix some issue and add function for feedback

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -8,6 +8,13 @@
     height: auto;
 }
 
+.keyimg_noinvert {
+    margin-top: 3px;
+    vertical-align: top;
+    width: 21px;
+    height: auto;
+}
+
 .keyimg1 {
     filter: invert(1) brightness(0);
     width: 24px;
