--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,5 +1,16 @@
 @import "./_variables.scss";
 
+.boxBtn {
+    background-color: #F0F0FC;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px #4743A7 solid;
+    border-radius: 8px
+}
+
 .keyimg {
     margin-top: 3px;
     vertical-align: top;
