--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,319 +1,322 @@
 @import "./_variables.scss";
 
 .boxBtn {
-    background-color: #F0F0FC;
-    width: 50px;
-    height: 50px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border: 1px #4743A7 solid;
-    border-radius: 8px
+  background-color: #e9ebf3;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  text-align: center;
+  overflow: hidden;
+  cursor: pointer;
+}
+.selected {
+    background-color: #BABABB !important;
 }
 
 .keyimg {
-    margin-top: 3px;
-    vertical-align: top;
-    filter: invert(1);
-    width: 21px;
-    height: auto;
+  margin-top: 3px;
+  vertical-align: top;
+  filter: invert(1);
+  width: 21px;
+  height: auto;
 }
 
 .keyimg_noinvert {
-    margin-top: 3px;
-    vertical-align: top;
-    width: 21px;
-    height: auto;
+  margin-top: 3px;
+  vertical-align: top;
+  width: 21px;
+  height: auto;
 }
 
 .keyimg1 {
-    filter: invert(1) brightness(0);
-    width: 24px;
+  filter: invert(1) brightness(0);
+  width: 24px;
 }
 
 .keyimg2 {
-    filter: invert(1) brightness(0);
-    vertical-align: center;
-    width: 48px;
+  filter: invert(1) brightness(0);
+  vertical-align: center;
+  width: 48px;
 }
 
 /* 滑块 */
 .el-slider__bar {
-    background-color: #4743A7 !important;
+  background-color: #4743a7 !important;
 }
 
 .el-slider {
-    --el-slider-height: 10px !important;
+  --el-slider-height: 10px !important;
 }
 
 .el-slider__button {
-    background-color: #4743A7 !important;
-    border: 4px solid #F0F0FC !important;
-    height: 30px !important;
-    border-radius: 3px !important;
+  background-color: #4743a7 !important;
+  border: 4px solid #f0f0fc !important;
+  height: 30px !important;
+  border-radius: 3px !important;
 }
 
 .el-slider__runway {
-    background-color: #DCDCDE !important;
+  background-color: #dcdcde !important;
 }
 
 .el-slider__stop {
-    background-color: transparent !important;
+  background-color: transparent !important;
 }
 
 /* 滑块 */
 
 .el-scrollbar__thumb {
-    background-color: #292c37 !important;
-    /* 设置滚动条颜色 */
+  background-color: #292c37 !important;
+  /* 设置滚动条颜色 */
 }
 
 .el-tooltip__trigger:focus-visible {
-    outline: unset;
+  outline: unset;
 }
 
 .module_box {
-    cursor: pointer;
-    border-left: 8px solid #e9ebf3;
+  cursor: pointer;
+  border-left: 8px solid #e9ebf3;
 
-    img {
-        height: 18px;
-    }
+  img {
+    height: 18px;
+  }
 }
 
 .img-but {
-    height: 24px;
+  height: 24px;
 }
 
 .img-title {
-    height: 18px;
+  height: 18px;
 }
 
 .bg-box {
-    background: linear-gradient(45deg, #FFFFFF 0%, #F5F5FF 100%);
+  background: linear-gradient(45deg, #ffffff 0%, #f5f5ff 100%);
 }
 
 .module_active {
-    color: #4743a7 !important;
-    border-left: 8px solid #4743a7;
-    background: radial-gradient(0% 0% at 0% 0%, #ffffff 0%, #c8c8fd 100%), #cacafd;
-    border-radius: 0px 10px 10px 0px;
+  color: #4743a7 !important;
+  border-left: 8px solid #4743a7;
+  background: radial-gradient(0% 0% at 0% 0%, #ffffff 0%, #c8c8fd 100%), #cacafd;
+  border-radius: 0px 10px 10px 0px;
 }
 
 .module_active2 {
-    color: #4743a7 !important;
-    background: radial-gradient(0% 0% at 0% 0%, #ffffff 0%, #c8c8fd 100%), #cacafd;
-    border-radius: 0px 0px 0px 0px;
+  color: #4743a7 !important;
+  background: radial-gradient(0% 0% at 0% 0%, #ffffff 0%, #c8c8fd 100%), #cacafd;
+  border-radius: 0px 0px 0px 0px;
 }
 
 .but-green {
-    background: radial-gradient(0% 0% at 0% 0%, #88faee 0%, #11f9d2 100%), #42bc79;
-    border-radius: 5px;
+  background: radial-gradient(0% 0% at 0% 0%, #88faee 0%, #11f9d2 100%), #42bc79;
+  border-radius: 5px;
 }
 
 .but-blue {
-    background: radial-gradient(0% 0% at 0% 0%, #1675f2 0%, #2998ff 100%), #3db2ef;
-    border-radius: 5px;
+  background: radial-gradient(0% 0% at 0% 0%, #1675f2 0%, #2998ff 100%), #3db2ef;
+  border-radius: 5px;
 }
 
 .but-grey {
-    background: radial-gradient(0% 0% at 0% 0%, #CFD9DF 0%, #E2EBF0 100%), #3DB2EF;
-    border-radius: 5px;
+  background: radial-gradient(0% 0% at 0% 0%, #cfd9df 0%, #e2ebf0 100%), #3db2ef;
+  border-radius: 5px;
 }
 
 .but-red {
-    background: radial-gradient(0% 0% at 0% 0%, #992747 0%, #CE3F6B 100%);
-    border-radius: 5px;
+  background: radial-gradient(0% 0% at 0% 0%, #992747 0%, #ce3f6b 100%);
+  border-radius: 5px;
 }
 
 .c-p {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .hv-100 {
-    height: 100vh;
+  height: 100vh;
 }
 
 .active {
-    color: #FC5D41 !important;
+  color: #fc5d41 !important;
 
-    img {
-        position: relative;
-        left: -99999px;
-        filter: drop-shadow(#FC5D41 99999px 0);
-    }
+  img {
+    position: relative;
+    left: -99999px;
+    filter: drop-shadow(#fc5d41 99999px 0);
+  }
 }
 
 //文章一行显示，多余省略号显示
 .title {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .p-a {
-    position: absolute;
+  position: absolute;
 }
 
 // 宽高
 .w-100 {
-    width: 100%;
+  width: 100%;
 }
 
 .h-100 {
-    height: 100%;
+  height: 100%;
 }
 
 .d-line-block {
-    display: inline-block !important;
+  display: inline-block !important;
 }
 
 //flex
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 // 字体加粗
 .fw-b {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .flex-column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .flex-row {
-    flex-direction: row;
+  flex-direction: row;
 }
 
 .flex-wrap {
-    flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 .flex-nowrap {
-    flex-wrap: nowrap;
+  flex-wrap: nowrap;
 }
 
 .flex-1 {
-    flex: 1;
+  flex: 1;
 }
 
 .br {
-    border-radius: 50%;
+  border-radius: 50%;
 }
 
 //字体
 @each $fontkey, $fontvalue in $font-sizes {
-    .fs-#{$fontkey} {
-        font-size: $fontvalue * $base-font-size;
-    }
+  .fs-#{$fontkey} {
+    font-size: $fontvalue * $base-font-size;
+  }
 
-    .lh-#{$fontkey} {
-        line-height: $fontvalue * $base-font-size;
-    }
+  .lh-#{$fontkey} {
+    line-height: $fontvalue * $base-font-size;
+  }
 }
 
 //颜色
 @each $colorkey, $color in $colors {
-    .text-#{$colorkey} {
-        color: $color;
-    }
+  .text-#{$colorkey} {
+    color: $color;
+  }
 
-    .bg-#{$colorkey} {
-        background-color: $color;
-    }
+  .bg-#{$colorkey} {
+    background-color: $color;
+  }
 
-    //边框
-    .b-#{$colorkey} {
-        border: 1px solid $color;
-        box-shadow: 1px 1px 2px 1px rgba(255, 255, 255, 0.3);
-    }
-
+  //边框
+  .b-#{$colorkey} {
+    border: 1px solid $color;
+    box-shadow: 1px 1px 2px 1px rgba(255, 255, 255, 0.3);
+  }
 }
 
 //对齐
 @each $var in (left, center, right) {
-    .text-#{$var} {
-        text-align: $var !important;
-    }
+  .text-#{$var} {
+    text-align: $var !important;
+  }
 }
 
 //flex
 @each $key, $value in $flex-jc {
-    .jc-#{$key} {
-        justify-content: $value;
-    }
+  .jc-#{$key} {
+    justify-content: $value;
+  }
 }
 
 @each $key, $value in $flex-ai {
-    .ai-#{$key} {
-        align-items: $value;
-    }
+  .ai-#{$key} {
+    align-items: $value;
+  }
 }
 
 //.mt-1 => margin top
 //spacing
 @each $typekey, $type in $spacing-types {
+  //.m-1
+  @each $sizekey, $size in $spacing-sizes {
+    .#{$typekey}-#{$sizekey} {
+      #{$type}: $size * $spacing-base-size;
+    }
 
-    //.m-1
+    .br-#{$sizekey} {
+      border-radius: $size * $spacing-base-size;
+    }
+
+    .br-t-#{$sizekey} {
+      border-top-left-radius: $size * $spacing-base-size;
+      border-top-right-radius: $size * $spacing-base-size;
+    }
+
+    .br-r-#{$sizekey} {
+      border-top-right-radius: $size * $spacing-base-size;
+      border-bottom-right-radius: $size * $spacing-base-size;
+    }
+
+    .br-b-#{$sizekey} {
+      border-bottom-right-radius: $size * $spacing-base-size;
+      border-bottom-left-radius: $size * $spacing-base-size;
+    }
+
+    .br-l-#{$sizekey} {
+      border-top-left-radius: $size * $spacing-base-size;
+      border-bottom-left-radius: $size * $spacing-base-size;
+    }
+  }
+
+  //.mx-1
+  @each $sizekey, $size in $spacing-sizes {
+    .#{$typekey}x-#{$sizekey} {
+      #{$type}-left: $size * $spacing-base-size;
+      #{$type}-right: $size * $spacing-base-size;
+    }
+
+    .#{$typekey}y-#{$sizekey} {
+      #{$type}-top: $size * $spacing-base-size;
+      #{$type}-bottom: $size * $spacing-base-size;
+    }
+  }
+
+  //.mt-1
+  @each $directionkey, $direction in $spacing-directions {
     @each $sizekey, $size in $spacing-sizes {
-        .#{$typekey}-#{$sizekey} {
-            #{$type}: $size * $spacing-base-size;
-        }
+      .#{$typekey}#{$directionkey}-#{$sizekey} {
+        #{$type}-#{$direction}: $size * $spacing-base-size;
+      }
 
-        .br-#{$sizekey} {
-            border-radius: $size * $spacing-base-size;
-        }
-
-        .br-t-#{$sizekey} {
-            border-top-left-radius: $size * $spacing-base-size;
-            border-top-right-radius: $size * $spacing-base-size;
-        }
-
-        .br-r-#{$sizekey} {
-            border-top-right-radius: $size * $spacing-base-size;
-            border-bottom-right-radius: $size * $spacing-base-size;
-        }
-
-        .br-b-#{$sizekey} {
-            border-bottom-right-radius: $size * $spacing-base-size;
-            border-bottom-left-radius: $size * $spacing-base-size;
-        }
-
-        .br-l-#{$sizekey} {
-            border-top-left-radius: $size * $spacing-base-size;
-            border-bottom-left-radius: $size * $spacing-base-size;
-        }
+      //t-1
+      .#{$directionkey}-#{$sizekey} {
+        #{$direction}: $size * $spacing-base-size;
+      }
     }
+  }
 
-    //.mx-1
-    @each $sizekey, $size in $spacing-sizes {
-        .#{$typekey}x-#{$sizekey} {
-            #{$type}-left: $size * $spacing-base-size;
-            #{$type}-right: $size * $spacing-base-size;
-        }
-
-        .#{$typekey}y-#{$sizekey} {
-            #{$type}-top: $size * $spacing-base-size;
-            #{$type}-bottom: $size * $spacing-base-size;
-        }
-    }
-
-    //.mt-1
-    @each $directionkey, $direction in $spacing-directions {
-        @each $sizekey, $size in $spacing-sizes {
-            .#{$typekey}#{$directionkey}-#{$sizekey} {
-                #{$type}-#{$direction}: $size * $spacing-base-size;
-            }
-
-            //t-1
-            .#{$directionkey}-#{$sizekey} {
-                #{$direction}: $size * $spacing-base-size;
-            }
-        }
-    }
-
-    .#{$typekey} {
-        #{$type}: 0;
-    }
+  .#{$typekey} {
+    #{$type}: 0;
+  }
 }
